<resources>
    <string name="app_name">Pronto Journal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_todo_list">Todo List</string>
    <string name="title_folder">Folder</string>
    <string name="title_sync">Sync</string>
    <string name="title_activity_note_list">Notes</string>
    <string name="title_cloud_sync">Cloud Data Sync</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_application_id" translatable="false">1084180085015342</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1084180085015342</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-0685840031635412/8579377308</string>
    <string name="banner_ad_unit_id_note_editor" translatable="false">ca-app-pub-0685840031635412/9352114794</string>
    <string name="banner_ad_unit_id_add_task" translatable="false">ca-app-pub-0685840031635412/1543182626</string>
    <string name="server_client_id" translatable="false">498554407152-49454rjtf4o83jkhejfk5kgvc90kru2b.apps.googleusercontent.com</string>
    <string name="invitation_custom_image">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta">Install</string>
    <string name="no_todo_list_found_default">No Todo List item found, use + button to start</string>
    <string name="no_todo_list_found_high_priority">No high priority prontoTask found, use + button to start</string>
    <string name="no_todo_list_found_medium_priority">No medium piority prontoTask found, use + button to start</string>
    <string name="no_todo_list_found_low_priority">No low priority prontoTask found, use + button to start</string>
    <string name="no_folder_found">No Folder found, use + button to start</string>
    <string name="no_notes_found">No Journal entry found, use the + button to start</string>
    <string name="error_message_account_does_not_exist">Account does not exists.</string>
    <string name="error_message_invalid_credentials">The provided credentials are invalid!</string>
    <string name="sync_reason_1">Backup your Journals to Pronto Diary cloud effortlessly. We value your privacy.</string>
    <string name="sync_reason_2">Access your Journal from any Android device you own, we are adding support for other devices as well.</string>
    <string name="sync_reason_3">Industry standard Encryption of your data at rest and SSL/TLS in flight</string>
    <string name="sync_reason_4">Peace of mind, if something happens to your device, be rest assured that your data will be waiting for you on your next device.</string>
    <string name="sync_reason_5">Your app will continue to work 100% offline. Only syncs when you have internet access.</string>
    <string name="sync_reason">  \nSign up and enable secure, cloud backup of your Journals, Diaries and Todo List. You can access them from any Android device. It\'s free. Always!.</string>
    <string name="sync_reason_upgrade">  \nComplete registration and enable secure, cloud backup of your Journals, Diaries and Todo List. You can access them from any Android device.</string>
    <string name="sync_reason_premium">  \nSupport us by upgrading to premium user and remove ads, enable secure, cloud backup of your Journals,
        Diaries and Todo List. You can access them from any Android device. \n\nPlus you get lifetime access to all of our exciting upcoming features
        such as task collaboration, support for multiple types of Journals and much more.
    </string>
    <string name="prompt_username">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_conformation">Confirm Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="label_sign_in">Sign in</string>
    <string name="action_log_out">Sign Out</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">Username required</string>
    <string name="error_invalid_password">Password required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="activity_register_label">Enable Cloud Sync</string>
    <string name="anonymous_account_failed_error">Anonymous Login Failed, check internet</string>
    <string name="title_activity_auth_ui">Register or Sign In</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="label_journals">Journals</string>
    <string name="label_tag">Tags</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_enable_sync">Enable Sync</string>
    <string name="label_settings">Settings</string>
    <string name="label_sync">Sync</string>
    <string name="label_todo_list">Todo List</string>
    <string name="label_folder">Folder</string>
    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_play">Play</string>
    <string name="note_detail">Journal Detail</string>
    <string name="action_send">Send</string>
    <string name="action_nfc">NFC Beam</string>
    <string name="action_record">Record</string>
    <string name="action_camera">Picture</string>
    <string name="action_sketch">Sketch</string>
    <string name="action_file">Files</string>
    <string name="action_alarm">Reminder</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="share_using">Share using</string>
    <string name="error_account_already_exist">Account already exists</string>
    <string name="label_title">Title</string>
    <string name="label_delete">Delete</string>
    <string name="label_yes">Yes</string>
    <string name="warning_are_you_sure">Are you sure ?</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="add_new_journal">New Journal</string>
    <string name="select_folder">Select Folder</string>
    <string name="placeholder_journal_title">Journal Title</string>
    <string name="placeholder_journal_text">Journal Entry</string>
    <string name="image_attachment">Image</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="files">Files</string>
    <string name="record">Record</string>
    <string name="sketch">Sketch</string>
    <string name="location">Location</string>
    <string name="action_attachment">Attachment</string>
    <string name="action_share">Share</string>
    <string name="action_tag">Tag</string>
    <string name="hint_enter_folder">Enter folder name</string>
    <string name="title_edit_folder">Edit Folder</string>
    <string name="title_add_folder">Add Folder</string>
    <string name="required">Required field</string>
    <string name="no_folder">No folder found</string>
    <string name="no_tag">No Tag found, use the + button to start</string>
    <string name="title_activity_note_detail">Journal Entry</string>
    <string name="creation">Created:</string>
    <string name="last_update">Updated:</string>
    <string name="delete_prompt">Delete</string>
    <string name="storage_not_available">Strorage not available</string>
    <string name="attachment">Attachment</string>
    <string name="alarm_set_on">Reminder set for</string>
    <string name="starting_from">starting from</string>
    <string name="action_gallery">Gallery</string>
    <string name="error_unable_to_save_file">Unable to save file</string>
    <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
    <string name="unable_to_save_file">Unable to save file</string>
    <string name="picture">Picture</string>
    <string name="select_attachment">Select Attachment</string>
    <string name="open_with">Open With</string>
    <string name="external_access_denied">External storage access denied</string>
    <string name="share_message_chooser">Share using</string>
    <string name="action_erase">erase</string>
    <string name="error_sketch_is_empty">Sketch is empty</string>
    <string name="error_no_mic">No Microphone found</string>
    <string name="start">Start</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="stop">Stop</string>
    <string name="start_recording">Start Recording</string>
    <string name="please_wait">Please Wait</string>
    <string name="processing_image">Processing attachment</string>
    <string name="saving_journal">Saving Journal</string>
    <string name="missing_title">Missing Title</string>
    <string name="missing_content">Missing Content</string>
    <string name="oops">Oops</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="error">Error</string>
    <string name="noNetwork">Ooops, it appears you do not have internet, internet access is required to initialize this app</string>
    <string name="fixNetworking">Network Settings</string>
    <string name="playServicesError">Google Play Services Error</string>
    <string name="label_journal">Journal</string>
    <string name="label_login">Login</string>
    <string name="action_register_short">Register</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_sound_key">pref_key_sound</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_vibration_key">pref_vibration_key</string>
    <string name="pref_vibration_title">Vibration</string>
    <string name="pref_tasknotification_key">pref_key_tasknotification</string>
    <string name="pref_tasknotification_title">Task notification</string>
    <string name="pref_daysummary_key">pref_daysummary_key</string>
    <string name="pref_daysummary_title">Day summary</string>
    <string name="pref_time_key">pref_time_key</string>
    <string name="pref_time_title">Choice time</string>
    <string name="pref_cancel">Cancel</string>
    <string name="pref_ok">OK</string>
    <string name="pref_add_sample_data">Add Sample Data</string>
    <string name="pref_remove_sample_data">Remove Sample Data</string>
    <string name="accessibility_logo">Accessibility Logo</string>
    <string name="splash_welcome_txt">Easy to use Journal, Diary and Todo List</string>
    <string name="get_started_btn_label">Get Started</string>
    <string name="label_login_with_space">"  Login"</string>
    <string name="have_an_acccount">Have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_an_acccount">Don\'t have an account?</string>
    <string name="sign_up_with_space">"  Sign up"</string>
    <string name="welcome_back_message">Welcome back! \n Login to enable cloud sync</string>
    <string name="upgrade">Upgrade</string>
</resources>