<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".ui.auth.LoginActivity">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/username_sign_in_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="48dp"
            android:paddingBottom="@dimen/margin_padding_small"
            android:paddingLeft="@dimen/margin_padding_small"
            android:paddingRight="@dimen/margin_padding_small">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/logo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_padding_small">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/accessibility_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_padding_small"
                    android:textSize="@dimen/text_size_xnormal"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/welcome_back_message"/>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_large"
                android:layout_below="@+id/logo_layout">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_below="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/forgot_password"
                style="@style/LabelStyle"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/password_layout"
                android:layout_marginTop="@dimen/margin_padding_tiny"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/forgot_password"
                android:textColor="@color/accent"
                android:textSize="16sp" />

            <Button
                android:id="@+id/email_login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_small"
                android:text="@string/label_login"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:layout_above="@+id/login_nav"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/login_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/no_have_account_textView"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/do_not_have_an_acccount"
                    android:textSize="@dimen/text_size_xnormal" />

                <TextView
                    android:id="@+id/sign_up_textview"
                    style="@style/LabelStyle"
                    android:layout_toEndOf="@id/no_have_account_textView"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/sign_up_with_space"
                    android:textColor="@color/primary"
                    android:clickable="true"
                    android:textSize="@dimen/text_size_xnormal" />
            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>
</LinearLayout>
